Add documentation for jvm11-server.options and jvm8-server.options keys