@@ -1,7 +1,7 @@
 This page documents the keys for the JVM server options across the various supported versions.
 
 ### Cassandra 3.11
-To configure the server JVM with Cassandra 3.11 you need to use the `jvm-options` key which corresonds to the `CASSANDRA_CONF/jvm.options` file.
+To configure the server JVM with Cassandra 3.11 you need to use the `jvm-options` key which corresponds to the `CASSANDRA_CONF/jvm.options` file.
 
 Here is a brief example showing it is used in a YAML manifest:
 
@@ -32,7 +32,7 @@ spec:
       initial_heap_size: "800m"
       max_heap_size: "800m"
 ```
-The following table lists the supports keys that can appear under `jvm-options` along with their corresponding property names in `jvm.options`.
+The following table lists the supported keys that can appear under `jvm-options` along with their corresponding property names in `jvm.options`.
 
 | Config Builder key | jvm.options property | Value type | Notes | 
 | ------------------ | :-------------------:| :--------: | :---: |
@@ -94,7 +94,11 @@ The following table lists the supports keys that can appear under `jvm-options` 
 | `use_thread_priorities` | `-XX:+UseThreadPriorities` | boolean | Enabled by default |
 
 ### Cassandra 4.0
-To configure the server JVM with Cassandra 4.0 you need to use the `jvm-server-options` key which corresonds to the `CASSANDRA_CONF/jvm-server.options` file.
+To configure the server JVM with Cassandra 4.0 you need to use the following keys:
+
+* `jvm-server-options` which corresponds to the `CASSANDRA_CONF/jvm-server.options` file and contains settings valid for all Java versions;
+* `jvm11-server-options` which corresponds to the `CASSANDRA_CONF/jvm11-server.options` file and contains settings for Java 11+;
+* `jvm8-server-options` which corresponds to the `CASSANDRA_CONF/jvm8-server.options` file and contains settings for Java 8.
 
 Here is a brief example showing it is used in a YAML manifest:
 
@@ -124,9 +128,11 @@ spec:
     jvm-server-options:
       initial_heap_size: "800m"
       max_heap_size: "800m"
+    jvm11-server-options:
+      garbarge_collector: ZGC
 ```
 
-The following table lists the supports keys that can appear under `jvm-server-options` along with their corresponding property names in `jvm-server.options`.
+The following table lists the supported keys that can appear under `jvm-server-options` along with their corresponding property names in `jvm-server.options`.
 
 | Config Builder key | jvm.options property | Value type | Notes | 
 | ------------------ | :-------------------:| :--------: | :---: |
@@ -175,3 +181,62 @@ The following table lists the supports keys that can appear under `jvm-server-op
 | `crash_on_out_of_memory_error` | `-XX:+CrashOnOutOfMemoryError` | boolean | Disabled by default. Requires `exit_on_out_of_memory_error` to be disabled. |
 | `print_heap_histogram_on_out_of_memory_error` | `-Dcassandra.printHeapHistogramOnOutOfMemoryError` | boolean | Disabled by default |
 | `exit_on_out_of_memory_error` | `-XX:+ExitOnOutOfMemoryError` | boolean | Disabled by default |
+
+The following table lists the supported keys that can appear under `jvm11-server-options` along with their corresponding property names in `jvm11-server.options`.
+
+| Config Builder key | jvm.options property | Value type | Notes | 
+| ------------------ |:--------------------:|:----------:|:-----:|
+| `additional-jvm-opts` | `JVM_OPTS` | Arbitrary JVM options passed to Cassandra on start up. | |
+| `conc_gc_threads` | `-XX:ConcGCThreads` | integer | Concurrent GC Threads. Valid only when `garbage_collector` is `G1GC`. |
+| `g1r_set_updating_pause_time_percent` | `-XX:G1RSetUpdatingPauseTimePercent` | integer | G1GC Updating Pause Time Percentage. Defaults to 5. Valid only when `garbage_collector` is `G1GC`. |
+| `garbage_collector` | various | string | The garbage collector to use. Possible values include `G1GC`, `ZGC`, `Shenandoah`, `Graal`. Defaults to `G1GC`. See below for details. |
+| `initiating_heap_occupancy_percent` | `-XX:InitiatingHeapOccupancyPercent` | integer | Initiating Heap Occupancy Percentage. Valid only when `garbage_collector` is `G1GC`. |
+| `io_netty_try_reflection_set_accessible` | `-Dio.netty.tryReflectionSetAccessible=true` | boolean | JPMS setting `io.netty.tryReflectionSetAccessible`. Defaults to true. |
+| `jdk_attach_allow_attach_self` | `-Djdk.attach.allowAttachSelf=true` | boolean | JPMS setting `jdk.attach.allowAttachSelf`. Defaults to true. |
+| `max_gc_pause_millis` | `-XX:MaxGCPauseMillis` | integer | G1GC Max GC Pause Milliseconds. Defaults to 500. Valid only when `garbage_collector` is `G1GC`. |
+| `parallel_gc_threads` | `-XX:ParallelGCThreads` | integer | Parallel GC Threads. Valid only when `garbage_collector` is `G1GC`. |
+
+Depending on the garbage collector selected with `garbage_collector`, the following JVM options will be automatically included:
+
+| Garbage Collector | JVM options                                                    | 
+|-------------------|:---------------------------------------------------------------|
+| `G1GC`            | `-XX:+UseG1GC`<br/>`-XX:+ParallelRefProcEnabled`               |
+| `ZGC`             | `-XX:+UseZGC`<br/>`-XX:+UnlockExperimentalVMOptions`           |
+| `Shenandoah`      | `-XX:+UseShenandoahGC`<br/>`-XX:+UnlockExperimentalVMOptions`  |
+| `Graal`           | `-XX:+UseJVMCICompiler`<br/>`-XX:+UnlockExperimentalVMOptions` |
+
+The following table lists the supported keys that can appear under `jvm8-server-options` along with their corresponding property names in `jvm8-server.options`.
+
+| Config Builder key | jvm.options property | Value type | Notes |
+| ------------------ |:--------------------:|:----------:|:-----:|
+| `additional-jvm-opts` | `JVM_OPTS` | Arbitrary JVM options passed to Cassandra on start up. | |
+| `cms_initiating_occupancy_fraction` | `-XX:CMSInitiatingOccupancyFraction` | integer | CMS Initiating Occupancy Fraction. Defaults to 75. Valid only when `garbage_collector` is `CMS`. |
+| `cms_wait_duration` | `-XX:CMSWaitDuration` | integer | CMS Max Duration. Defaults to 10000. Valid only when `garbage_collector` is `CMS`. |
+| `conc_gc_threads` | `-XX:ConcGCThreads` | integer | Concurrent GC Threads. Valid only when `garbage_collector` is `G1GC`. |
+| `g1r_set_updating_pause_time_percent` | `-XX:G1RSetUpdatingPauseTimePercent` | integer | G1GC Updating Pause Time Percentage. Defaults to 5. Valid only when `garbage_collector` is `G1GC`. |
+| `garbage_collector` | various | string | The garbage collector to use. Possible values include `G1GC`, `CMS`. Defaults to `G1GC`. See below for details. |
+| `gc_log_file_size` | `-XX:GCLogFileSize` | string | GC log file size. Defaults to `10M`. |
+| `heap_size_young_generation` | `-Xmn` | boolean | Heap size young generation. Valid only when `garbage_collector` is `CMS`. |
+| `initiating_heap_occupancy_percent` | `-XX:InitiatingHeapOccupancyPercent` | integer | Initiating Heap Occupancy Percentage. Valid only when `garbage_collector` is `G1GC`. |
+| `log_gc` | `-Xloggc:/var/log/cassandra/gc.log` | boolean | Log GC. Defaults to false. |
+| `max_gc_pause_millis` | `-XX:MaxGCPauseMillis` | integer | G1GC Max GC Pause Milliseconds. Defaults to 500. Valid only when `garbage_collector` is `G1GC`. |
+| `max_tenuring_threshold` | `-XX:MaxTenuringThreshold` | integer | Max Tenuring Threshold. Defaults to 1. Valid only when `garbage_collector` is `CMS`. |
+| `number_of_gc_log_files` | `-XX:NumberOfGCLogFiles` | integer | Number of GC log files. Defaults to 10. |
+| `parallel_gc_threads` | `-XX:ParallelGCThreads` | integer | Parallel GC Threads. Valid only when `garbage_collector` is `G1GC`. |
+| `print_flss_statistics` | `-XX:PrintFLSStatistics=1` | boolean | Print FLSS Statistics. Defaults to false. |
+| `print_gc_application_stopped_time` | `-XX:+PrintGCApplicationStoppedTime` | boolean | Print GC Application Stopped Time. Defaults to true. |
+| `print_gc_date_stamps` | `-XX:+PrintGCDateStamps` | boolean | Print GC Date Stamps. Defaults to true. |
+| `print_gc_details` | `-XX:+PrintGCDetails` | boolean | Print GC Details. Defaults to true. |
+| `print_heap_at_gc` | `-XX:+PrintHeapAtGC` | boolean | Print Heap at GC. Defaults to true. |
+| `print_promotion_failure` | `-XX:+PrintPromotionFailure` | boolean | Print Promotion Failure. Defaults to true. |
+| `print_tenuring_distribution` | `-XX:+PrintTenuringDistribution` | boolean | Print Tenuring Distribution. Defaults to true. |
+| `survivor_ratio` | `-XX:SurvivorRatio` | integer | Survivor ratio. Defaults to 8. Valid only when `garbage_collector` is `CMS`. |
+| `thread_priority_policy_42` | `-XX:ThreadPriorityPolicy=42` | boolean | Enable lowering thread priority without being root on linux. Defaults to true. |
+| `use_gc_log_file_rotation` | `-XX:+UseGCLogFileRotation` | boolean | Use GC Log File Rotation. Defaults to true. |
+
+Depending on the garbage collector selected with `garbage_collector`, the following JVM options will be automatically included:
+
+| Garbage Collector | JVM options  | 
+|-------------------|:-------------|
+| `G1GC`            | `-XX:+UseG1GC`<br/>`-XX:+ParallelRefProcEnabled` |
+| `CMS`             | `-XX:+UseParNewGC`<br/>`-XX:+UseConcMarkSweepGC`<br/>`-XX:+CMSParallelRemarkEnabled`<br/>`-XX:+UseCMSInitiatingOccupancyOnly`<br/>`-XX:+CMSParallelInitialMarkEnabled`<br/>`-XX:+CMSEdenChunksRecordAlways` |
